<resources>
    <string name="app_name">PlayPrism</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forgot_password">Забули пароль?</string>
    <string name="sign_in">Увійти</string>
    <string name="password">Пароль</string>
    <string name="email">Email / Логін</string>
</resources>